# usdt-premium-monitor-rs

./: .env.example  .gitignore  Cargo.toml  README.md  README_CN.md
src/: config.rs  logger.rs  main.rs  network.rs  notifier.rs  strategy.rs
src/sources/: binance.rs  forex.rs  mod.rs  okx.rs
